// `Removed` for deprecated features removed in this release.
// `Fixed` for any bug fixes.
// `Security` to invite users to upgrade in case of vulnerabilities.

[[v2.4.0]]
v2.4.0 (unreleased)
-------------------

Added
~~~~~

- New `content.blocking.hosts.block_subdomains` setting which can be used to
  disable the subdomain blocking for the hosts-based adblocker introduced in
  v2.3.0.

Fixed
~~~~~

- Switching tabs via mouse wheel scrolling now works properly on macOS. Set
  `tabs.mousewheel_switching` to false if you prefer the previous behavior.
- Speculative fix for a crash when closing qutebrowser while a systray
  notification is shown.

Changed
~~~~~~~

- Typing in the filename prompt now filters matching directories.
- When opening a file qutebrowser can't handle from a `file:///` directory
  listing, qutebrowser now opens it with the default application rather than
  displaying a download prompt.
- In Greasemonkey scripts, using "overrideMimeType" with GM_xmlhttpRequest is
  now supported.
- `:hint --rapid` is now supported for the `tab` hinting target no matter what
  `tabs.background` is set to, as there are various scenarios where tabs can
  open in the background.
- New flags for the `qute-pass` userscript:
  * `--unfiltered` to show all secrets, not just the one matching the current
    URL.
  * `--always-show-selection` to confirm the password to be entered even if
    there's only a single match.

[[v2.3.1]]
v2.3.1 (2021-07-28)
-------------------

Fixed
~~~~~

- Updated the workaround for Google Account log in claiming that this browser
  isn't secure. For an equivalent workaround on older versions, run:
  `:set -u https://accounts.google.com/* content.headers.user_agent "Mozilla/5.0 ({os_info}; rv:90.0) Gecko/20100101 Firefox/90.0"`
- Corrupt cache file exceptions with `adblock` 0.5.0+ are now handled properly.
- Crash when entering unicode surrogates into the filename prompt.